--- a/Csv/Csv.nuspec
+++ b/Csv/Csv.nuspec
@@ -7,6 +7,7 @@
         <authors>Steve Hansen</authors>
         <owners>Steve Hansen</owners>
         <projectUrl>https://github.com/stevehansen/csv/</projectUrl>
+		<iconUrl>https://raw.github.com/stevehansen/csv/master/icon.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Really simple csv library.</description>
         <copyright>Copyright © 2015 Steve Hansen</copyright>
