--- a/Csv/Csv.nuspec
+++ b/Csv/Csv.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/01/nuspec.xsd">
   <metadata minClientVersion="2.8">
     <id>Csv</id>
-    <version>1.0</version>
+    <version>$version$</version>
     <title>Csv</title>
     <authors>Steve Hansen</authors>
     <owners>Steve Hansen</owners>
