--- a/Csv/Csv.csproj
+++ b/Csv/Csv.csproj
@@ -43,6 +43,7 @@
     <Compile Include="CsvOptions.cs" />
     <Compile Include="CsvReader.cs" />
     <Compile Include="ICsvLine.cs" />
+    <Compile Include="HeaderMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
