--- a/Csv/Csv.nuspec
+++ b/Csv/Csv.nuspec
@@ -7,6 +7,7 @@
     <authors>Steve Hansen</authors>
     <owners>Steve Hansen</owners>
     <projectUrl>https://github.com/stevehansen/csv/</projectUrl>
+	<repository type="git" url="https://github.com/stevehansen/csv/" />
     <iconUrl>https://raw.github.com/stevehansen/csv/master/icon.png</iconUrl>
     <licenseUrl>https://raw.github.com/stevehansen/csv/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
