--- a/Csv/Csv.nuspec
+++ b/Csv/Csv.nuspec
@@ -7,7 +7,7 @@
     <authors>Steve Hansen</authors>
     <owners>Steve Hansen</owners>
     <projectUrl>https://github.com/stevehansen/csv/</projectUrl>
-	  <repository type="git" url="https://github.com/stevehansen/csv/" />
+    <repository type="git" url="https://github.com/stevehansen/csv/" />
     <iconUrl>https://raw.github.com/stevehansen/csv/master/icon.png</iconUrl>
     <license type="expression">MIT</license>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -18,11 +18,11 @@
   <files>
     <file src="..\Csv\bin\Release\net40\Csv.dll" target="lib\net40\Csv.dll" />
     <file src="..\Csv\bin\Release\net40\Csv.xml" target="lib\net40\Csv.xml" />
-    <file src="..\Csv\bin\Release\netstandard1.0\Csv.dll" target="lib\netstandard1.0\Csv.dll" />
-    <file src="..\Csv\bin\Release\netstandard1.0\Csv.xml" target="lib\netstandard1.0\Csv.xml" />
+    <file src="..\Csv\bin\Release\netstandard2.0\Csv.dll" target="lib\netstandard2.0\Csv.dll" />
+    <file src="..\Csv\bin\Release\netstandard2.0\Csv.xml" target="lib\netstandard2.0\Csv.xml" />
     <file src="..\Csv\bin\Release\netstandard2.1\Csv.dll" target="lib\netstandard2.1\Csv.dll" />
     <file src="..\Csv\bin\Release\netstandard2.1\Csv.xml" target="lib\netstandard2.1\Csv.xml" />
-    <file src="..\Csv\bin\Release\netcoreapp3.1\Csv.dll" target="lib\netcoreapp3.1\Csv.dll" />
-    <file src="..\Csv\bin\Release\netcoreapp3.1\Csv.xml" target="lib\netcoreapp3.1\Csv.xml" />
+    <file src="..\Csv\bin\Release\net8.0\Csv.dll" target="lib\net8.0\Csv.dll" />
+    <file src="..\Csv\bin\Release\net8.0\Csv.xml" target="lib\net8.0\Csv.xml" />
   </files>
 </package>
